Fix the brochure button's z-index.
To make brochure appear above any other layer in case of overlapping.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -502,6 +502,7 @@ left: 20%;
     padding: 0.4% 2%;
     font-size: .8em;
     color: white; 
+    z-index: 4;
 }
 
 #event-brochure:hover {
